--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,11 @@
             <fileset dir="${lib.dir}" includes="**/*.jar"/>
         </path>
         <mkdir dir="ant_bin/classes/core"/>
-        <javac includeantruntime="false" srcdir="src/core" destdir="ant_bin/classes/core" classpathref="classpath"/>
+        <javac executable="/Users/cstevens/.jenv/versions/1.8/bin/javac"
+               fork="yes"
+               includeantruntime="false" 
+               srcdir="src/core" 
+               destdir="ant_bin/classes/core" 
+               classpathref="classpath"/>
     </target>
 </project>
